--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,4 +13,10 @@
         @apply flex justify-between items-center p-4 hover:shadow-lg rounded-lg 
         cursor-pointer text-black bg-white max-w-md mx-auto xl:mx-0;
     }
+    .sidebarButton{
+        @apply dark:border-t border-gray-600 py-3 px-4 cursor-pointer opacity-80 hover:opacity-100;
+    }    
+    .sidebarLink{
+        @apply text-[13px] font-medium text-blue-500 hover:underline cursor-pointer px-2.5;
+    }
 }
